<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/common_navbar_back"
            android:paddingRight="20dp"
            android:text="@string/back_str"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/category_about_str"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/border_bg"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:text="@string/about_str1" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:textColor="@color/black_50"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:text="@string/about_str2" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>