<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/web_view_root_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/common_navbar_back"
            android:paddingRight="20dp"
            android:text="@string/back_str"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/category_zaixian_str"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/start_btn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/start_zhanbu_str"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/base_list_scrollbar_handle"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000"
            android:divider="#00000000"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:overScrollMode="never"
            android:scrollbarStyle="outsideOverlay"
            android:smoothScrollbar="true" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_warn_str"
            android:textSize="16sp"
            android:textColor="@color/black_50" />
    </RelativeLayout>
</RelativeLayout>