<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/web_view_root_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/common_navbar_back"
            android:paddingRight="20dp"
            android:text="@string/back_str"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/category_zaixian_str"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:scrollbarThumbVertical="@drawable/base_list_scrollbar_handle"
            android:scrollbarTrackVertical="@drawable/base_list_scrollbar_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/activity_zaixian_title"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/taluo_title_str"
                    android:paddingRight="10dp" />

                <TextView
                    android:id="@+id/activity_zaixian_time"
                    android:layout_width="wrap_content"
                    android:textColor="@color/text_normal_color"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="4月18日"
                    android:paddingRight="10dp" />

                <RelativeLayout
                    android:id="@+id/weixin_box"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingBottom="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="10dp"
                    android:paddingTop="14dp"
                    android:background="@drawable/tableview_bg"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/weixin_name_text"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_below="@+id/weixin_name_text"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:id="@+id/weixin_name_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black_50"
                            android:text="@string/weixin_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black_50"
                            android:text="@string/weixin_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/tableview_arrow" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/activity_zaixian_img"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="545dp" />

                <TextView
                    android:id="@+id/desc_text"
                    android:textSize="15sp"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/black_60_alpha"
                    android:paddingTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>